deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deploy
  namespace: ckad-prep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80

        volumeMounts:
        - name: secret-volume
          mountPath: /etc/webapp/secrets
        - name: shared-logs
          mountPath: /usr/share/nginx/html/logs

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5

        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 10

      - name: busybox
        image: busybox
        command: ["sh", "-c", "while true; do date >> /var/log/app.log; sleep 5; done"]

        volumeMounts:
        - name: shared-logs
          mountPath: /var/log

      volumes:
      - name: secret-volume
        secret:
          secretName: webapp-secret
      - name: shared-logs
        emptyDir: {}
